syntax = "proto3";

option go_package = "api/proto;proto";

service SystemMonitoring {
  rpc Metrics(MonitoringRequest) returns (stream MonitoringResponse){}
}

message MonitoringRequest {
  uint32 every_seconds = 1;
  uint32 avg_seconds = 2;
}

message MonitoringResponse {
  double load_average = 1;
  CpuLoad cpu_load = 2;
  DiskLoad disk_load = 3;
  map<string, DiskInfo> disk_info = 4;
}

message CpuLoad {
  double user_mode = 1;
  double system_mode = 2;
  double idle = 3;
}

message DiskLoad {
  double transfer_per_second = 1;
  double read_per_second = 2;
  double write_per_second = 3;
}

message DiskInfo {
  double usage_size = 1;
  double usage_inode = 2;
}
